orchestrator-run-20260615-103616.log
=== Orchestrator run log (20260615-103616) ===

--- stdout ---


--- stderr ---
Compiling knot v0.5.4 (/home/hayden/workspace/ai/knot)
error[E0277]: the trait bound `PathBuf: ToSchema` is not satisfied
   --> src/domain/events.rs:169:19
    |
169 |         loom_dir: PathBuf,
    |                   ^^^^^^^ the trait `ToSchema` is not implemented for `PathBuf`
    |
    = help: the following other types implement trait `ToSchema`:
              &'t [T]
              &'t mut [T]
              &str
              ()
              AgentConfig
              AgentProfile
              BTreeMap<K, T>
              BTreeSet<K>
            and 53 others

error[E0277]: the trait bound `PathBuf: PartialSchema` is not satisfied
   --> src/domain/events.rs:169:19
    |
169 |         loom_dir: PathBuf,
    |                   ^^^^^^^ the trait `utoipa::__dev::ComposeSchema` is not implemented for `PathBuf`
    |
    = help: the following other types implement trait `utoipa::__dev::ComposeSchema`:
              &[T]
              &mut [T]
              &str
              AgentConfig
              AgentProfile
              BTreeMap<K, T>
              BTreeSet<K>
              Box<T>
            and 52 others
    = note: required for `PathBuf` to implement `PartialSchema`
note: required by a bound in `name`
   --> /home/hayden/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/utoipa-5.5.0/src/lib.rs:374:21
    |
374 | pub trait ToSchema: PartialSchema {
    |                     ^^^^^^^^^^^^^ required by this bound in `ToSchema::name`
...
405 |     fn name() -> Cow<'static, str> {
    |        ---- required by a bound in this associated function

For more information about this error, try `rustc --explain E0277`.
error: could not compile `knot` (lib) due to 4 previous errors
